--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 
 
 <!DOCTYPE HTML>
-<!--[if lt IE 7 ]> <html class="ie6"> <![endif]-->
-<!--[if IE 7 ]>    <html class="ie7"> <![endif]-->
-<!--[if IE 8 ]>    <html class="ie8"> <![endif]-->
-<!--[if IE 9 ]>    <html class="ie9"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--> <html class="yeah" lang="es"> <!--<![endif]-->
+<!--[if lt IE 7 ]> <html class="ie6 no-js"> <![endif]-->
+<!--[if IE 7 ]>    <html class="ie7 no-js"> <![endif]-->
+<!--[if IE 8 ]>    <html class="ie8 no-js"> <![endif]-->
+<!--[if IE 9 ]>    <html class="ie9 no-js"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html class="yeah no-js" lang="es"> <!--<![endif]-->
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -17,37 +17,8 @@
 	<!--[if lt IE 9]>
 		<script src="js/html5shiv.js"></script>
 	<![endif]-->
-<script>
-$( document ).ready(function() {
-   
 
-    $(document).ready(function() {
-
-   function checkWindowSize() {
-
-    if ( $(window).width() > 1000 ) {
-
-        $('body').addClass('ph');
-
-    }
-
-    else {
-
-        $('body').removeClass('ph');
-
-    }
-
-   }
-
-$(window).resize(checkWindowSize);
-
-});
-
-
-    
-    
-});
-</script>
+	<script src="js/modernizr.custom.78807.js"></script>
 
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="css/epp.css">
@@ -55,15 +26,37 @@ $(window).resize(checkWindowSize);
     <link rel="canonical" href="http://www.8pxplease.com">
 
 
-<style>
-    .ph{
-        background:pink;
-    }
-    </style>
+
     <title></title>
 </head>
 
 <body>
+	<div class="epp-ctn epp-ctn--lg epp-ctn--gtr">
+		<div class="epp-cl-1-3 epp-ctn epp-ctn--gtr epp-air-16">
+           	<div class="epp-cl-1-2">
+            	<p>Anidado con gtr y air</p>
+       		</div>
+       		<div class="epp-cl-1-2">
+            	<p>Anidado con gtr i air</p>
+       		</div>
+        </div>
+        <div class="epp-cl-1-3 epp-ctn epp-ctn--gtr">
+           	<div class="epp-cl-1-2">
+            	<p>Anidado con gtr</p>
+       		</div>
+       		<div class="epp-cl-1-2">
+            	<p>Anidado con gtr</p>
+       		</div>
+        </div>
+        <div class="epp-cl-1-3 epp-ctn epp-air-16">
+           	<div class="epp-cl-1-2">
+            	<p>Anidado sin gtr y air</p>
+       		</div>
+       		<div class="epp-cl-1-2">
+            	<p>Anidado sin gtr y air</p>
+       		</div>
+        </div>
+	</div>
 
 	<div class="epp-ctn epp-ctn--lg epp-ctn--gtr">
 		<div class="epp-cl-1-3 epp-cl-1-2--tb">
