--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
         </div>
 	</div>
 
+    <div class="epp-ctn epp-ctn--lg epp-ctn--gtr-inside">
+        <div class="epp-cl-1-3">
+            <p>epp-ctn--gtr-inside (elimina el padding exterior)</p>
+        </div>
+        <div class="epp-cl-1-3">
+            <p>epp-ctn--gtr-inside (elimina el padding exterior)</p>
+        </div>
+        <div class="epp-cl-1-3">
+            <p>epp-ctn--gtr-inside (elimina el padding exterior)</p>
+        </div>
+    </div>
+
 	<div class="epp-ctn epp-ctn--lg epp-ctn--gtr">
 		<div class="epp-cl-1-3 epp-cl-1-2--tb">
             <p>1</p>
