--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
         <div class="epp-cl-1-3">
             <p>epp-ctn--gtr-inside (elimina el padding exterior)</p>
         </div>
+        <div class="epp-cl-1">
+            <p>epp-ctn--gtr-inside (sin padding exterior en epp-cl-1)</p>
+        </div>
     </div>
 
 	<div class="epp-ctn epp-ctn--lg epp-ctn--gtr">
